finished first implementation of R resolver